--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -1,11 +1,11 @@
 <header class="header">
     <div class="container">
         <div class="header__row">
-            <a href="index.html" class="header__logo header__logo--black">SpinVibe.</a>
+            <a href="index.html" class="header__logo header__logo--black">KnowledgeBase</a>
             <nav class="header__nav nav">
                 <ul class="nav__list">
                     <li><a href="index.html#about" class="nav__link active">About</a></li>
-                    <li><a href="index.html#why" class="nav__link">Why us</a></li>
+                    <li><a href="index.html#advantagesy" class="nav__link">Advantages</a></li>
                     <li><a href="index.html#how" class="nav__link">How it works</a></li>
                     <li><a href="index.html#contacts" class="nav__link">Contacts</a></li>
                 </ul>
