--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -1,29 +1,6 @@
 <section class="hero">
 	<div class="container">
-		<div class="subtitle__wrapper">
-			<div class="subtitle__wrapper-border">
-				<p class="hero__subtitle">Feel the thrill of every spin</p>
-				<p class="hero__subtitle-description">Dive into the ultimate casino roulette experience with SpinVibe. Play
-					anytime, anywhere, and let the wheel decide your destiny.</p>
-			</div>
-		</div>
-		<a href="#!" class="hero__btn">
-			<div class="bars_left">
-				<div class="bar bar_8"></div>
-				<div class="bar bar_7"></div>
-				<div class="bar bar_6"></div>
-				<div class="bar bar_5"></div>
-			</div>
-			<span class="hero__btn-text">
-				Get the App
-			</span>
-			<div class="bars_right">
-				<div class="bar bar_1"></div>
-				<div class="bar bar_2"></div>
-				<div class="bar bar_3"></div>
-				<div class="bar bar_4"></div>
-			</div>
-		</a>
-		<h1 class="hero__title">fortune awaits.</h1>
+		<h1 class="hero__title">Learn smarter, grow <br class="desktopOnly"> faster — your knowledge journey starts here!
+		</h1>
 	</div>
 </section>
