--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<title>SpinVibe — Ultimate Casino Roulette Experience</title>
+	<title>KnowledgeBase</title>
 	<meta name="description"
 		content="Experience the thrill of SpinVibe — the ultimate online roulette game. Play anytime, anywhere, and let the wheel decide your destiny. Fast, exciting, and immersive gameplay awaits!" />
 	<meta name="keywords"
@@ -23,8 +23,6 @@
 		@@include('blocks/grid-guides.html')
 
 		@@include('blocks/hero.html')
-
-		@@include('blocks/spin.html')
 
 		@@include('blocks/why.html')
 
