--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -1,7 +1,9 @@
 <header class="header">
     <div class="container">
         <div class="header__row">
-            <a href="index.html" class="header__logo header__logo--black">KnowledgeBase</a>
+            <a href="index.html" class="header__logo header__logo--black">
+                <img src="../../img/logo/logo.svg" alt="logo">
+            </a>
             <nav class="header__nav nav">
                 <ul class="nav__list">
                     <li><a href="index.html#about" class="nav__link active">About</a></li>
