--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -2,5 +2,11 @@
 	<div class="container">
 		<h1 class="hero__title">Learn smarter, grow <br class="desktopOnly"> faster — your knowledge journey starts here!
 		</h1>
+
+		<a href="#!" class="main__button secondary">
+			<span class="main__button-text">
+				Get the App
+			</span>
+		</a>
 	</div>
 </section>
