--- a/src/html/blocks/mobile-nav.html
+++ b/src/html/blocks/mobile-nav.html
@@ -2,27 +2,15 @@
 	<div class="border_wrapper">
 		<ul class="mobile-nav__list">
 			<li><a href="index.html#about" class="nav__link active">About us</a></li>
-			<li><a href="index.html#why" class="nav__link">Why us</a></li>
+			<li><a href="index.html#advantages" class="nav__link">Advantages</a></li>
 			<li><a href="index.html#how" class="nav__link">How it works</a></li>
 			<li><a href="index.html#contacts" class="nav__link">Contacts</a></li>
 		</ul>
 	</div>
-	<a href="#!" class="white__btn">
-		<div class="bars_left">
-			<div class="bar bar_8"></div>
-			<div class="bar bar_7"></div>
-			<div class="bar bar_6"></div>
-			<div class="bar bar_5"></div>
-		</div>
-		<span class="white__btn-text">
+	<a href="#!" class="main__button">
+		<span class="main__button-text">
 			Get the App
 		</span>
-		<div class="bars_right">
-			<div class="bar bar_1"></div>
-			<div class="bar bar_2"></div>
-			<div class="bar bar_3"></div>
-			<div class="bar bar_4"></div>
-		</div>
 	</a>
 	<!-- <div class="cross__wrapper">
 		<div class="cross__social"><a href="https://www.facebook.com/" target="_blank">Facebook</a>
