--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,7 +24,7 @@
 
 		@@include('blocks/hero.html')
 
-		@@include('blocks/why.html')
+		@@include('blocks/about.html')
 
 		@@include('blocks/how.html')
 
