--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -8,4 +8,61 @@
 		</h2>
 	</div>
 
+	<div class="content">
+		<p class="text">
+			Our mission: to make learning accessible for everyone. At KnowledgeBase, we believe that education is the key to
+			personal and professional growth. Our team of educators, developers, and designers has created a platform that
+			makes learning flexible, engaging, and rewarding.
+		</p>
+
+		<div class="cards">
+			<div class="card">
+				<div class="card__title">
+					10,000+
+				</div>
+				<p class="card__text">
+					Courses available
+			</div>
+			<div class="card">
+				<div class="card__title">
+					500+
+				</div>
+				<p class="card__text">
+					New courses added monthly
+			</div>
+		</div>
+		<div class="cards">
+			<div class="card">
+				<div class="card__title">
+					95%
+				</div>
+				<p class="card__text">
+					User satisfaction rate
+			</div>
+			<div class="card">
+				<div class="card__title">
+					200+
+				</div>
+				<p class="card__text">
+					Expert instructors worldwide
+			</div>
+		</div>
+		<div class="cards">
+			<div class="card">
+				<div class="card__title">
+					1 Million+
+				</div>
+				<p class="card__text">
+					Active learners
+			</div>
+			<div class="card">
+				<div class="card__title">
+					10,000+
+				</div>
+				<p class="card__text">
+					Courses available
+			</div>
+		</div>
+	</div>
+
 </section>
