--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,7 +28,7 @@
 
 		@@include('blocks/how.html')
 
-		@@include('blocks/contacts.html')
+		<!-- @@include('blocks/contacts.html') -->
 
 		@@include('blocks/form.html')
 
