--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -48,19 +48,12 @@
 			</div>
 		</div>
 		<div class="cards">
-			<div class="card">
+			<div class="card card-last">
 				<div class="card__title">
 					1 Million+
 				</div>
 				<p class="card__text">
 					Active learners
-			</div>
-			<div class="card">
-				<div class="card__title">
-					10,000+
-				</div>
-				<p class="card__text">
-					Courses available
 			</div>
 		</div>
 	</div>
