--- a/src/html/index.html
+++ b/src/html/index.html
@@ -26,7 +26,7 @@
 
 		@@include('blocks/about.html')
 
-		@@include('blocks/how.html')
+		@@include('blocks/advantages.html')
 
 		<!-- @@include('blocks/contacts.html') -->
 
