--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -1,18 +1,23 @@
 <footer class="footer">
-	<div class="container">
-		<div class="footer__links">
-			<ul class="footer__links main">
-				<li><a href="index.html" class="footer__link footer__link-logo">SpinVibe.</a></li>
-				<li><a href="index.html#about" class="footer__link">About</a></li>
-				<li><a href="index.html#why" class="footer__link">Why us</a></li>
-				<li><a href="index.html#how" class="footer__link">How it works</a></li>
-				<li><a href="index.html#contacts" class="footer__link">Contacts</a></li>
-				<li><a href="#!" class="footer__link">Get the app</a></li>
-				<li><a href="privacy-policy.html" class="footer__link">Privacy policy</a></li>
-				<li><a href="https://www.facebook.com/" target="_blank" class="footer__link">Facebook</a></li>
-				<li><a href="https://www.instagram.com/" target="_blank" class="footer__link">Instagram</a></li>
-			</ul>
-		</div>
+	<div class="footer__title">
+		Do you have any questions or suggestions, do you need help?
+	</div>
+	<div class="footer__subtitle">
+		Our unified support center in messengers,<br> by phone and by mail
+	</div>
+	<div class="footer__links">
+		<ul class="footer__links main">
+			<li><a href="index.html" class="footer__link footer__link-logo"><img src="../../img/logo/logo.svg" alt="logo"></a>
+			</li>
+			<li><a href="index.html#about" class="footer__link">About</a></li>
+			<li><a href="index.html#why" class="footer__link">Why us</a></li>
+			<li><a href="index.html#how" class="footer__link">How it works</a></li>
+			<li><a href="index.html#contacts" class="footer__link">Contacts</a></li>
+			<li><a href="#!" class="footer__link">Get the app</a></li>
+			<li><a href="privacy-policy.html" class="footer__link">Privacy policy</a></li>
+			<li><a href="https://www.facebook.com/" target="_blank" class="footer__link">Facebook</a></li>
+			<li><a href="https://www.instagram.com/" target="_blank" class="footer__link">Instagram</a></li>
+		</ul>
 		<div class="footer__copyright">
 			© 2025 SpinVibe. All rights reserved.
 		</div>
