--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,6 +28,8 @@
 
 		@@include('blocks/advantages.html')
 
+		@@include('blocks/how.html')
+
 		@@include('blocks/form.html')
 
 		@@include('blocks/footer.html')
