--- a/src/html/blocks/how.html
+++ b/src/html/blocks/how.html
@@ -44,6 +44,10 @@
 			</div>
 		</div>
 
+		<div class="how__bg_wrapper">
+			<img class="how__bg" src="../../img/how/how_bg.png" srcset="../../img/how/how_bg@2x.png" alt="Alt">
+		</div>
+
 	</div>
 
 </section>
