--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -7,20 +7,28 @@
 	</div>
 	<div class="footer__links">
 		<ul class="footer__links main">
-			<li><a href="index.html" class="footer__link footer__link-logo"><img src="../../img/logo/logo.svg" alt="logo"></a>
+			<li class="li_logo">
+				<a href="index.html" class="footer__link footer__link-logo"><img src="../../img/logo/logo.svg" alt="logo"></a>
+
+				<div class="li_logo_text">
+					<p>123 Learning Lane, Suite 4B, San Francisco, CA 94107, USA</p>
+					<p>+1 (855) 456-7890</p>
+				</div>
 			</li>
-			<li><a href="index.html#about" class="footer__link">About</a></li>
-			<li><a href="index.html#why" class="footer__link">Why us</a></li>
-			<li><a href="index.html#how" class="footer__link">How it works</a></li>
-			<li><a href="index.html#contacts" class="footer__link">Contacts</a></li>
-			<li><a href="#!" class="footer__link">Get the app</a></li>
-			<li><a href="privacy-policy.html" class="footer__link">Privacy policy</a></li>
+			<li class="li_subtitle">E-mail</li>
+			<li><a href="mailto:info@knowledgebase.com" class="footer__link">info@knowledgebase.com</a></li>
+			<li class="li_subtitle">Social</li>
 			<li><a href="https://www.facebook.com/" target="_blank" class="footer__link">Facebook</a></li>
 			<li><a href="https://www.instagram.com/" target="_blank" class="footer__link">Instagram</a></li>
+			<li><a href="index.html#about" class="footer__link">About</a></li>
+			<li><a href="index.html#advantages" class="footer__link">Advantages</a></li>
+			<li><a href="index.html#how" class="footer__link">How it works</a></li>
+			<li><a href="index.html#contacts" class="footer__link">Contacts</a></li>
 		</ul>
-		<div class="footer__copyright">
-			© 2025 SpinVibe. All rights reserved.
-		</div>
+	</div>
+	<div class="footer__copyright">
+		<span>© knowledgebase, 2025</span>
+		<a href="privacy-policy.html" class="footer__link">Privacy policy</a>
 	</div>
 
 </footer>
