--- a/src/html/index.html
+++ b/src/html/index.html
@@ -30,6 +30,8 @@
 
 		@@include('blocks/how.html')
 
+		@@include('blocks/reviews.html')
+
 		@@include('blocks/form.html')
 
 		@@include('blocks/footer.html')
