--- a/src/html/privacy-policy.html
+++ b/src/html/privacy-policy.html
@@ -96,7 +96,7 @@
       top: 0;
       width: 100vw;
       height: 60px;
-      background-color: var(--accent);
+      background-color: var(--text-color-dark);
     }
 
     .header.container {
