--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -3,10 +3,12 @@
 		<h1 class="hero__title">Learn smarter, grow <br class="desktopOnly"> faster — your knowledge journey starts here!
 		</h1>
 
-		<a href="#!" class="main__button secondary">
+		<a href="#!" class="main__button secondary transparent">
 			<span class="main__button-text">
 				Get the App
 			</span>
 		</a>
+
+		<div class="hero__line"></div>
 	</div>
 </section>
