--- a/src/html/blocks/form.html
+++ b/src/html/blocks/form.html
@@ -15,10 +15,11 @@
 			<input type="email" name="email" placeholder="E-mail" required autocomplete="on">
 			<input type="phone" name="phone" placeholder="Phone" required autocomplete="on">
 			<textarea name="message" placeholder="Message" required></textarea>
-			<div class="contact__form-text">By clicking the "Send Message" button, you confirm your consent to the processing
-				of
-				personal data
-				and agree to the <a href="privacy-policy.html">privacy policy</a></div>
+			<div class="contact__form-text">
+				<span>By clicking the "Send Message" button, you confirm your <br class="mobileOnly"> consent to the processing
+					of <br class="desktopOnly"> personal data and
+					agree to the <a href="privacy-policy.html">privacy policy</a></span>
+			</div>
 
 			<button class="main__button">
 				<span class="main__button-text">
