--- a/src/html/blocks/reviews.html
+++ b/src/html/blocks/reviews.html
@@ -44,8 +44,8 @@
 						to transition into HR management but lacked some of the necessary certifications and expertise. This
 						platform made learning so accessible — I could study at my own pace and focus on the areas that mattered
 						most to my career. The certifications I earned through KnowledgeBase were recognized during my interview
-						process, and they gave me the confidence to showcase my new skills. Thank you, KnowledgeBase, for empowering
-						me to take control of my future!””</div>
+						process, and they gave me the confidence to showcase my new skills. Thank you for empowering me to take
+						control of my future!”</div>
 					<div class="slide__img">
 						<img src="../../img/slider/slide_3.png" srcset="../../img/slider/slide_3@2x.png" alt="slide">
 					</div>
@@ -98,12 +98,12 @@
 				<div class="slide__role">Software engineer, UK</div>
 			</div>
 			<div class="slide">
-				<div class="slide__text">“KnowledgeBase played a pivotal role in helping me land my dream job. I was looking
-					to transition into HR management but lacked some of the necessary certifications and expertise. This
-					platform made learning so accessible — I could study at my own pace and focus on the areas that mattered
-					most to my career. The certifications I earned through KnowledgeBase were recognized during my interview
-					process, and they gave me the confidence to showcase my new skills. Thank you, KnowledgeBase, for empowering
-					me to take control of my future!””</div>
+				<div class="slide__text">“KnowledgeBase played a pivotal role in helping me land my dream job. I was looking to
+					transition into HR management but lacked some of the necessary certifications and expertise. This platform
+					made learning so accessible — I could study at my own pace and focus on the areas that mattered most to my
+					career. The certifications I earned through KnowledgeBase were recognized during my interview process, and
+					they gave me the confidence to showcase my new skills. Thank you for empowering me to take control of my
+					future!”</div>
 				<div class="slide__img">
 					<img src="../../img/slider/slide_3.png" srcset="../../img/slider/slide_3@2x.png" alt="slide">
 				</div>
