--- a/src/html/blocks/how.html
+++ b/src/html/blocks/how.html
@@ -11,7 +11,7 @@
 
 		<div class="cards">
 			<div class="card">
-				<div class="card__media">
+				<div class="card__media blue">
 					<img class="card__img card__img--base" src="../../img/how/how_1.png" srcset="../../img/how/how_1@2x.png"
 						alt="brick" loading="lazy">
 					<img class="card__img card__img--fill" src="../../img/how/how_1_fill.png"
@@ -22,7 +22,7 @@
 			</div>
 
 			<div class="card">
-				<div class="card__media">
+				<div class="card__media red">
 					<img class="card__img card__img--base" src="../../img/how/how_2.png" srcset="../../img/how/how_2@2x.png"
 						alt="brick" loading="lazy">
 					<img class="card__img card__img--fill" src="../../img/how/how_2_fill.png"
@@ -33,7 +33,7 @@
 			</div>
 
 			<div class="card">
-				<div class="card__media">
+				<div class="card__media green">
 					<img class="card__img card__img--base" src="../../img/how/how_3.png" srcset="../../img/how/how_3@2x.png"
 						alt="brick" loading="lazy">
 					<img class="card__img card__img--fill" src="../../img/how/how_3_fill.png"
