--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,11 +6,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<title>KnowledgeBase</title>
+	<title>KnowledgeBase — Smart Learning Platform</title>
 	<meta name="description"
-		content="Experience the thrill of SpinVibe — the ultimate online roulette game. Play anytime, anywhere, and let the wheel decide your destiny. Fast, exciting, and immersive gameplay awaits!" />
+		content="Unlock knowledge with KnowledgeBase — your smart learning platform. Explore structured courses, track progress, and boost your skills with interactive tools anytime, anywhere." />
 	<meta name="keywords"
-		content="SpinVibe, online roulette, casino game, roulette experience, immersive casino, play roulette online, thrilling casino game, Spin Vibe" />
+		content="KnowledgeBase, online learning, smart learning platform, interactive courses, progress tracking, skill development, education online, knowledge base" />
 
 	<link rel="stylesheet" href="./css/main.css" />
 	<link rel="icon" type="image/x-icon" href="../img/favicons/favicon.png">
