--- a/src/html/thanks.html
+++ b/src/html/thanks.html
@@ -10,11 +10,11 @@
 		href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
 		rel="stylesheet">
 
-	<title>Thank You – SpinVibe</title>
+	<title>Thank You — KnowledgeBase</title>
 	<meta name="description"
-		content="Thank you for contacting SpinVibe. We’ll be in touch soon to keep the excitement of roulette and casino fun alive." />
+		content="Thank you for choosing KnowledgeBase! Your journey towards smarter learning and skill growth starts now. Explore interactive courses and unlock new opportunities." />
 	<meta name="keywords"
-		content="SpinVibe, thank you, contact confirmation, message received, roulette support, casino game support, SpinVibe help" />
+		content="KnowledgeBase thank you, successful registration, learning journey, online education, smart learning, skill growth, interactive courses" />
 
 
 	<link rel="stylesheet" href="css/main.css" />
