--- a/src/html/blocks/form.html
+++ b/src/html/blocks/form.html
@@ -1,4 +1,4 @@
-<section class="form container" id="form">
+<section class="form container" id="contacts">
 	<h2 class="form__title">
 		<p>Ask about</p>
 		<p>Avaliability</p>
