--- a/src/html/blocks/form.html
+++ b/src/html/blocks/form.html
@@ -10,7 +10,7 @@
 			<a href="mailto:info@knowledgebase.com" class="text__link">info@knowledgebase.com</a>
 		</div>
 
-		<form class="contact__form" action="../../php/thanks_form.php" method="post">
+		<form class="contact__form" action="php/thanks_form.php" method="post">
 			<input type="text" name="name" placeholder="Name" required autocomplete="on">
 			<input type="email" name="email" placeholder="E-mail" required autocomplete="on">
 			<input type="phone" name="phone" placeholder="Phone" required autocomplete="on">
